# my-english-buddy

./: .env.example  .gitignore  README.ja.md  README.md  prompt.txt.example  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  container.py  di_container.py  main.py
app/application/: conversation_runner.py  conversation_service.py  errors.py  interruption_context.py  memory_service.py  reply_queue.py  sleep_watchdog.py  speaker_loop.py  wake_word_detector.py
app/application/port/: chat_client.py  listener.py  speaker.py  speech_to_text.py  text_to_speech.py
app/audio/: listener.py  speaker.py  speech_to_text.py  text_to_speech.py
app/domain/entity/: conversation.py  conversation_memory.py
app/domain/vo/: chat_message.py  turn.py
app/infra/: config.py
app/infrastructure/: __init__.py
app/infrastructure/audio/: listener.py  speaker.py
app/infrastructure/local/: speech_to_text.py  text_to_speech.py
app/infrastructure/openai/: __init__.py  chat_client.py  speech_to_text.py  text_to_speech.py
app/interface/: __init__.py  chat_client.py  speech_to_text.py  text_to_speech.py
app/llm/: openai_client.py
app/presentation/: conversation_worker.py  main_window.py
app/ui/: conversation_worker.py  main_window.py
app/utils/: args.py  env.py  logger.py  text.py
tests/: README.md  __init__.py  conftest.py  test_config.py
tests/application/: test_conversation_memory.py  test_conversation_service.py  test_errors.py  test_memory_service.py  test_reply_queue.py
tests/domain/entity/: test_conversation.py
tests/domain/vo/: test_chat_message.py  test_turn.py
tests/infrastructure/local/: test_text_to_speech.py
tests/infrastructure/openai/: test_chat_client.py  test_speech_to_text.py  test_text_to_speech.py
tests/utils/: test_args.py  test_env.py  test_logger.py  test_text.py
tools/: debug_playback_modes.py  debug_speaker_startup.py  debug_underflow_callback.py  diagnose_sounddevice.py
