[project]
name = "my-english-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pyside6>=6.10.2",
    "python-dotenv>=1.0.1",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

lint = [
    "ruff>=0.9.0",
]

local-stt = [
    "faster-whisper>=1.2.1",
]

vad = [
    "webrtcvad>=2.0.10",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
