[project]
name = "my-english-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pyside6>=6.10.2",
    "python-dotenv>=1.0.1",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

lint = [
    "ruff>=0.9.0",
]

local-stt = [
    "faster-whisper>=1.2.1",
]

local-tts = [
    "kokoro>=0.9.4",
    "misaki[ja]>=0.9.0",
    "torch>=2.6.0",
]

vad = [
    "webrtcvad-wheels>=2.0.12; platform_system == 'Windows'",
    "webrtcvad>=2.0.10; platform_system != 'Windows'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
